fixed icon shrinking on iOS

--- a/wp-content/themes/ddp-refresh/css/sass/partials/_theme-header.scss
+++ b/wp-content/themes/ddp-refresh/css/sass/partials/_theme-header.scss
@@ -68,7 +68,7 @@
   width: 100%;
   top: 50%;
   transform: translateY(-50%);
-  height: auto;
+  height: 100%;
 
   .site-logo--icon-only & {
     display: none;
@@ -81,7 +81,7 @@
   top: 50%;
   transform: translateY(-50%);
   width: 55.129px;
-  height: auto;
+  height: 100%;
   margin-top: 50%;
 
   .site-logo--icon-only & {
