--- a/wp-content/themes/ddp-refresh/css/style.css
+++ b/wp-content/themes/ddp-refresh/css/style.css
@@ -1769,7 +1769,7 @@ body .gform_wrapper .gform_footer {
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-  height: auto;
+  height: 100%;
 }
 
 /* line 73, /Users/jeffwinegar/dev/ddp/wp-content/themes/ddp-refresh/css/sass/partials/_theme-header.scss */
@@ -1786,7 +1786,7 @@ body .gform_wrapper .gform_footer {
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   width: 55.129px;
-  height: auto;
+  height: 100%;
   margin-top: 50%;
 }
 
